crates/zizmor/tests/integration/snapshots/integration__snapshot__undocumented_permissions-7.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"undocumented-permissions/partially-documented.yml\")).args([\"--persona=pedantic\"]).run()?"
---
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:7:3
  |
7 |   contents: write  # Needed to create releases
  |   ^^^^^^^^^^^^^^^ contents: write is overly broad at the workflow level
  |
  = note: audit confidence → High

error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:9:3
  |
9 |   issues: write    # Needed to update issue comments
  |   ^^^^^^^^^^^^^ issues: write is overly broad at the workflow level
  |
  = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
 --> @@INPUT@@:6:1
  |
6 | / permissions:
7 | |   contents: write  # Needed to create releases
8 | |   packages: read
9 | |   issues: write    # Needed to update issue comments
  | |____________________________________________________- help: consider adding comments to document the purpose of each permission
  |
  = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
  --> @@INPUT@@:16:5
   |
16 | /     permissions:
17 | |       contents: read   # Needed to read repo contents
18 | |       actions: write
19 | |       packages: write  # Needed to publish packages
   | |___________________________________________________- help: consider adding comments to document the purpose of each permission
   |
   = note: audit confidence → High

help[undocumented-permissions]: permissions without explanatory comments
  --> @@INPUT@@:30:5
   |
30 | /     permissions:
31 | |       contents: write
32 | |       issues: read
   | |__________________- help: consider adding comments to document the purpose of each permission
   |
   = note: audit confidence → High

5 findings: 0 unknown, 0 informational, 3 low, 0 medium, 2 high
